kubernetes/verdaccio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app: npm-registry
    environment: production
    istio-injection: enabled
